Update styling to ensure consistent left alignment for each next event

--- a/src/sass/claims-status.scss
+++ b/src/sass/claims-status.scss
@@ -889,7 +889,11 @@ h1:focus {
       vertical-align: middle;
     }
 
-    p {
+    // p {
+    //   margin-left: 2.1em;
+    // }
+
+    div.event-description {
       margin-left: 2.1em;
     }
 
